--- a/index.html
+++ b/index.html
@@ -1,33 +1,37 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32.png">
+
+    <title>Frontend Mentor | NFT preview card component</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet">
-    <title>Equilibrium</title>
+   
 </head>
 <body>
     <main class="conteudo_principal">
         <div class="container">
             <div class="overlay">
-                <img class="hoverImg" src="/nft-preview-card-component-main/images/icon-view.svg" alt="view">
+                <img class="hoverImg" src="/images/icon-view.svg" alt="view">
             </div>
         </div>
-        <img class="mainImg" src="/nft-preview-card-component-main/images/image-equilibrium.jpg" alt="Equilibrium">
+        <img class="mainImg" src="/images/image-equilibrium.jpg" alt="Equilibrium">
         <div class="conteudo_texto">
             <p class="style2 font3 padd1 act">Equilibrium #3429</p>
             <p class="style1 padd1">Our Equilibrium collection promotes balance and calm.</p>
             <div class="texto_div">
-                <img class="imgIcon si2" src="/nft-preview-card-component-main/images/icon-ethereum.svg" alt="icon"><p class="style3 si3">0.041 ETH</p>
+                <img class="imgIcon si2" src="/images/icon-ethereum.svg" alt="icon"><p class="style3 si3">0.041 ETH</p>
                 <p class="align"></p>
-                <img class="imgIcon" src="/nft-preview-card-component-main/images/icon-clock.svg" alt="icon"><p class="style1 si1">3 days left</p>
+                <img class="imgIcon" src="/images/icon-clock.svg" alt="icon"><p class="style1 si1">3 days left</p>
             </div>
             <hr/>
             <div class="texto_div">
-                <img class="avatar_img" src="/nft-preview-card-component-main/images/image-avatar.png" alt="Jules Wyvern">
+                <img class="avatar_img" src="/images/image-avatar.png" alt="Jules Wyvern">
                 <p class="style1 padd1 xm">Creation of <strong class="style2 font2 act">Jules Wyvern</strong></p>
             </div>
         </div>
