--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
 
     <title>Frontend Mentor | NFT preview card component</title>
     <link rel="stylesheet" href="style.css">
@@ -17,21 +17,21 @@
     <main class="conteudo_principal">
         <div class="container">
             <div class="overlay">
-                <img class="hoverImg" src="/images/icon-view.svg" alt="view">
+                <img class="hoverImg" src="./images/icon-view.svg" alt="view">
             </div>
         </div>
-        <img class="mainImg" src="/images/image-equilibrium.jpg" alt="Equilibrium">
+        <img class="mainImg" src="./images/image-equilibrium.jpg" alt="Equilibrium">
         <div class="conteudo_texto">
             <p class="style2 font3 padd1 act">Equilibrium #3429</p>
             <p class="style1 padd1">Our Equilibrium collection promotes balance and calm.</p>
             <div class="texto_div">
-                <img class="imgIcon si2" src="/images/icon-ethereum.svg" alt="icon"><p class="style3 si3">0.041 ETH</p>
+                <img class="imgIcon si2" src="./images/icon-ethereum.svg" alt="icon"><p class="style3 si3">0.041 ETH</p>
                 <p class="align"></p>
-                <img class="imgIcon" src="/images/icon-clock.svg" alt="icon"><p class="style1 si1">3 days left</p>
+                <img class="imgIcon" src="./images/icon-clock.svg" alt="icon"><p class="style1 si1">3 days left</p>
             </div>
             <hr/>
             <div class="texto_div">
-                <img class="avatar_img" src="/images/image-avatar.png" alt="Jules Wyvern">
+                <img class="avatar_img" src="./images/image-avatar.png" alt="Jules Wyvern">
                 <p class="style1 padd1 xm">Creation of <strong class="style2 font2 act">Jules Wyvern</strong></p>
             </div>
         </div>
